[package]
name = "ittybitty"
version = "0.1.0"
edition = "2021"
authors = ["Atlas Dostal <email@atlasdostal.com>"]
repository = "https://github.com/rodolphito/ittybitty"
keywords = ["smallvec", "bitvec", "storage", "bitset", "vec"]
categories = ["data-structures", "memory-management", "caching"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "An itty bitty bitset to hold your itty bitty bits."

[dev-dependencies]
generic-tests = "0.1.2"